yaml/opengrok/opengrok-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengrok
  namespace: opengrok
  labels:
    app: opengrok
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opengrok
  template:
    metadata:
      labels:
        app: opengrok
    spec:
      volumes:
        - name: opengrok-data
          persistentVolumeClaim:
            claimName: opengrok-data
      containers:
      - name: opengrok-app
        ports:
        - containerPort: 8080
          name: opengrokapp
          protocol: TCP
        image: registry.gitlab.com/vistaprint-org/technology-operations/developer-experience/tanit/opengrok/opengrok-app
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
        volumeMounts:
        - name: opengrok-data
          mountPath: /opengrok/src
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
  restartPolicy: Always
