yaml/opengrok/opengrok-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opengrok
  name: opengrok
  namespace: opengrok
spec:
  ports:
  - name: http
    nodePort: 30001
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: ssh
    nodePort: 30002
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: opengrok
  type: NodePort
